# stuff

pysim-main/: INSTALLATION.md  MANIFEST.in  PACKAGE_SUMMARY.md  README.md  README_database_storage.md  create_simulation_tables.sql  pyproject.toml  requirements.txt  setup.py  test_package.py
pysim-main/docs/: code_flow_diagrams.md  fast_sim_execution_trace_analysis.txt  fastsim_data_structures.md  profile_data_structure_analysis.txt  trackdata_data_structure_analysis.txt
pysim-main/pysim/: FastSimM.py  FastSimODE.py  GetESpec_braking.py  GetHCBoundsDef_braking.py  __init__.py  calcLVratio.py  calcRopeForces.py  cli.py  defineCarGroups.py  defineCouplers.py  downSampleFastSim.py  expandSpec.py  gravityforces.py  initFastSim.py  interpFastSim.py  locoeffort_of_notch_speed.py  makeeffelev.py  models.py  normalizeProfile.py  ode23simple.py  optspec_dtm.py  query_simulation_results.py  runFastSimM.py  runPostRun.py  runSim.py  slewRateFilter.py  ssCouplerDisplacement.py  test_db_storage.py  test_runPostRun.py  unit_conversions.py  upsampleProfile.py
pysim-main/test_FastSimM/: Fmax2all.csv  Fmin2all.csv  Kawu.csv  Klocked.csv  M.csv  T.csv  TestFastSimM_simple.py  b.csv  c.csv  x2all.csv
pysim-main/test_calcRopeForces/: test_calcRopeForces.py
pysim-main/test_gravityforces/: README.md  dataset.txt  distout.csv  gravityforces_output.csv  test_gravityforces.py  trainParam.txt
pysim-main/test_initFastSim/: README.md  spec.txt  test_initFastSim.py
pysim-main/test_runFastSimM/: Locos.txt  Train.txt  profile.txt  range.csv  spec.txt  test_runFastSimM.py  test_runSim.py
tripoptgym-main/: .gitignore  README.md  dr_input.csv  dr_output.csv  route_data_generated.csv  route_input_parsed.txt  setup.py
tripoptgym-main/configs/: default_config.yaml
tripoptgym-main/docs/: QUICKSTART.md
tripoptgym-main/tests/: __init__.py  test_agent.py  test_environment.py  test_network.py  test_physics.py
tripoptgym-main/tripoptgym/: __init__.py
tripoptgym-main/tripoptgym/agents/: __init__.py  dqn.py  heuristic.py  inference.py  network.py
tripoptgym-main/tripoptgym/environment/: __init__.py  env.py  physics.py
tripoptgym-main/tripoptgym/scripts/: __init__.py  main.py
tripoptgym-main/tripoptgym/utils/: __init__.py  config.py  device.py  process_dr_data.py  route_converter.py  training_logger.py
tripoptgym-main/tripoptgym/visualization/: __init__.py  rendering.py  sim_to_csv.py  video.py
