[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pysim"
version = "1.0.0"
description = "Python Train Simulation Package for FastSim dynamics modeling"
readme = "README.md"
authors = [
    {name = "Joseph Wakeman", email = "joseph.wakeman@wabtec.com"}
]
maintainers = [
    {name = "Joseph Wakeman", email = "joseph.wakeman@wabtec.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
]
keywords = ["train", "simulation", "dynamics", "railway", "fastsim", "physics"]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0", 
    "sqlalchemy>=1.4.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
# Optional visualization dependencies
viz = [
    "matplotlib>=3.4.0",
    "plotly>=5.0.0",
    "seaborn>=0.11.0",
]

# Optional jupyter notebook dependencies  
jupyter = [
    "jupyter>=1.0.0",
    "ipywidgets>=7.0.0",
    "matplotlib>=3.4.0",
]

# Development dependencies
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0", 
    "black>=21.0",
    "flake8>=3.9",
    "mypy>=0.800",
]

# Documentation dependencies
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
    "myst-parser>=0.15",
]

# All optional dependencies
all = [
    "matplotlib>=3.4.0",
    "plotly>=5.0.0", 
    "seaborn>=0.11.0",
    "jupyter>=1.0.0",
    "ipywidgets>=7.0.0",
]

[project.scripts]
pysim-run = "pysim.cli:main_run"
pysim-postrun = "pysim.cli:main_postrun"
pysim-analysis = "pysim.cli:main_analysis"

[project.urls]
Homepage = "https://gitlab.corp.wabtec.com/Joseph.Wakeman/pysim"
Repository = "https://gitlab.corp.wabtec.com/Joseph.Wakeman/pysim.git"
Documentation = "https://gitlab.corp.wabtec.com/Joseph.Wakeman/pysim/-/tree/main/docs"
"Bug Tracker" = "https://gitlab.corp.wabtec.com/Joseph.Wakeman/pysim/-/issues"

[tool.setuptools]
packages = ["pysim"]
include-package-data = true

[tool.setuptools.package-data]
pysim = ["data/*.json", "data/*.csv", "data/*.txt"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "test_calcRopeForces",
    "test_FastSimM", 
    "test_gravityforces",
    "test_initFastSim",
    "test_runFastSimM",
]